# SANA_8BIT_VST

./: .gitignore  CLAUDE.md  CMakeLists.txt  README-ELK.md  SANA_8BIT_VST.jucer
.github/workflows/: build.yml
Source/: BaseAudioProcessor.h  EditorGUI.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DspUtils.h  SimpleSound.h  SimpleVoice.h  SynthParameters.h  Waveforms.h
Source/GUI/: ParametersComponent.cpp
